fix: wrapping of properties section

--- a/pyresample/static/css/style.css
+++ b/pyresample/static/css/style.css
@@ -29,7 +29,7 @@ body.vscode-dark {
 .pyresample-wrap {
   display: block !important;
   min-width: 700px;
-  max-width: 900px;
+  max-width: 1050px;
 }
 
 .pyresample-text-repr-fallback {
